2008-04-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.24.modules: Cut and paste telepathy
	related stuff from freedesktop-2.22.modules.
	
	* modulesets/gnome-2.24.modules: 
	  1. GIMP: update dependencies adding suggested 
	  2. GIMP: use by default --without-gnomevfs in
	     order to test GIO stuff 
	  3. WebKit: use by default --enable-svg-filters

2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-suites-2.24.modules (epiphany): revert last
	change, add a comment about epiphany-webkit.

2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-suites-2.24.modules (epiphany): change branch
	to trunk, and depends on WebKit.

2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-external-deps-2.24.modules (mozilla): Update firefox
	version to 2.0.0.14. Fixes #528840

2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules (PackageKit): add
	"--disable-tests" to let the installation going on.

2008-04-19  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/versioncontrol/git.py (GitSvnBranch._checkout): Raise a
	proper error message when the location is incorrect.

2008-04-18  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/freedesktop-2.24.modules: Add lirc.

	* modulesets/gnome-2.24.modules: Add gnome-lirc-properties.

2008-04-17  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/utils/trayicon.py (TrayIcon.close): Don't break if the
	process does not exists anymore. See #526745.

2008-04-17  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Add ldtp.
	* modulesets/gnome-suites-2.24.modules: Use svn trunk for gtkmm.

2008-04-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: Add project hamster to
	-proposed.

2008-04-17  John Carr  <john.carr@unrouted.co.uk>

	* modulesets/gnome-2.24.modules: