@@ -1,3 +1,8 @@
+2008-04-20  Marc-André Lureau  <marcandre.lureau@gmail.com>
+
+	* jhbuild/main.py (main): don't raise EPIPE exception.
+	Fixes: #529065
+
 2008-04-20  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/freedesktop-2.24.modules: Cut and paste telepathy
